# iw-assigner

./: LICENSE  README.md  assignRest.py  assigner.py  createGroups.py  pyproject.toml  testdata.xlsx
legacy/: assigner.py
testing/: eval_legacy_output.py  generate_fake_data.py  testdata.xlsx
tickets/: createTicketTokens.py
