[tool.poetry]
name = "iw-assigner"
version = "0.1.0"
description = ""
authors = ["artur <git-ar.houze@aleeas.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
